--- a/mod00-01/css/style.css
+++ b/mod00-01/css/style.css
@@ -18,6 +18,7 @@ h1	{
 h2{
 	text-transform: lowercase;
 	letter-spacing: 2px;
+	color: lightblue;
 
 }
 
@@ -32,6 +33,10 @@ h2{
 
 .about{
 	width: 100%;
+	font-size: 15px;
+	line-height: 1.5;
+
+
 }
 
 .container{
