--- a/mod00-01/css/style.css
+++ b/mod00-01/css/style.css
@@ -1,6 +1,6 @@
 body {
 	background-color: lightblue;
-	background: url("../img/bg01.jfif");
+	background: url("../img/BG01.png");
 	background-size: cover;
 	background-attachment: fixed;
 	color: white;
