--- a/mod02-11/css/style.css
+++ b/mod02-11/css/style.css
@@ -1,82 +1,163 @@
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box; /*to avoid overflow (horizontal scroll bar)*/
-}
-
-.container{
-
-	background-color: #eaedf0;
-}
-
-.page{
-	width: 900px;
-	margin: 0 auto;
-	/*border: 1px solid;*/
-	background-color: black;
-}
-
-
-.bar{
-	height: 300px;
+.container1{
+	height: auto;
 	width: 700px;
-	background-color: black; /*blue*/
-}
-
-
-.content{
-	/*height: 500px;*/
-	width: 650px;
-	background-color: #f5cf8e; /*yellow*/
+	background-color: black;
 	float: left;
-	/*opacity: 0.5;*/
 	padding: 20px;
 }
 
-.article-image{
-	width: 300px;
-	height: 300px;
+.column1{
+	height: 150px;
+	width: 150px;
+	background-color: gray;
+	margin-right: 10px;
 	float: left;
-	margin-right: 20px;
-	margin-bottom: 20px; 
-}
-
-.footer{
-	clear: both; /*will remove floating inside effects*/
-	/*height: 200px;*/
-	background-color: #d6e9fe; /*light blue*/
-	/*border: 1px solid red;*/
-}
-
-.column{
-	height: 160px;
-	width: 31%;
-	background-color: #b2d6ff;
-	float: left;
-	margin: 20px 1.16%;
 	position: relative;
 }
 
-.avatar > img{ 
-	width: 70px;
-	height: 70px;
-	background-color: #d6e9fe;
-	border-radius: 10%;
-	margin: 25px;
+.p{
+	height: 150px;
+	width: 50%;
+	position: relative;
+}
+
+.container2{
+	height: auto;
+	width: 700px;
+	background-color: black;
 	float: left;
+	padding: 10px;
 }
 
-.username{
-	margin-top: 30px;
+.column2{
+	height: 150px;
+	width: 150px;
+	background-color: gray;
+	float: left;
+	margin-right: 10px;
+	position: relative;
 }
 
-.comment{
-	margin: 10px;
-	overflow: hidden;
+.column3{
+	height: 100px;
+	width: 200px;
+	background-color: gray;
+	float: left;
+	margin-right: 10px;
+	position: relative;
 }
-/***
-best practice to clear floats
-***/
+
+.container3{
+	height: auto;
+	width: 500px;
+	background-color: black;
+	float: left;
+	padding: 10px;
+}
+
+.column4{
+	height: 100px;
+	width: 200px;
+	background-color: gray;
+	float: right;
+	margin-right: 10px;
+	position: relative;
+}
+.container4{
+	height: auto;
+	width: 500px;
+	background-color: black;
+	float: left;
+	padding: 10px;
+}
+
+.column5{
+	height: 150px;
+	width: 150px;
+	background-color: gray;
+	float: right;
+	margin-right: 10px;
+	position: relative;
+}
+.container5{
+	height: auto;
+	width: 700px;
+	background-color: black;
+	float: left;
+	padding: 10px;
+}
+
+.column6{
+	height: 50px;
+	width: 50px;
+	background-color: gray;
+	float: left;
+	margin-right: 10px;
+	position: relative;
+}
+.container6{
+	height: auto;
+	width: 700px;
+	background-color: black;
+	float: left;
+	padding: 10px;
+}
+
+.column7{
+	height: 100px;
+	width: 100px;
+	background-color: gray;
+	float: left;
+	margin-right: 10px;
+	position: relative;
+	border: box;
+}
+.container7{
+	height: auto;
+	width: 700px;
+	background-color: black;
+	float: left;
+	padding: 10px;
+}
+
+.column7{
+	height: 50px;
+	width: 50px;
+	background-color: gray;
+	float: left;
+	margin-right: 10px;
+	position: relative;
+	border: box;
+}
+
+.column8{
+	height: 50px;
+	width: 50px;
+	background-color: gray;
+	float: left;
+	margin-right: 10px;
+	position: relative;
+	border: box;
+}
+
+.column9{
+	height: 50px;
+	width: 50px;
+	background-color: gray;
+	float: left;
+	margin-right: 10px;
+	position: relative;
+	border: box;
+}
+.container7{
+	height: auto;
+	width: 700px;
+	background-color: black;
+	float: left;
+	padding: 10px;
+}
+
+
 
 .clear:after{
 	content: "";
@@ -85,42 +166,7 @@ best practice to clear floats
 
 }
 
-/**
-css work around
-**/
-
-/*managing text overflow*/
-.block-with-text{
-	overflow: hidden;
-	position: relative;
-	/*font-size = 16px; 16px + 8px = 24px*/
-	line-height: 1.2em; 
-	max-height: 3.6em;
-	text-align: justify;
-	margin-right: -1em;
-	padding-right: 30px;
-}
-
-.block-with-text:before {
-	content: "...";
-	position: absolute;
-	right: 17px;
-	bottom: 0;
-}
-
-.block-with-text:after {
-	content: "";
-	position: absolute;
-	right: 17px;
-	width: 1em;
-	height: 1em;
-	margin-top: 0.2em;
-	background: white;
-}
-
-.read-more{
-	position: absolute;
-	right: 18px;
-	bottom: 16px;
-
+.page1{
+	width: 900px;
+	margin: 0 auto;
 }
