--- a/csp1/css/style.css
+++ b/csp1/css/style.css
@@ -3,7 +3,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #727987; /*navbar background color*/
+    background-color: #D5D7DA; /*navbar background color*/
 }
 
 
@@ -14,14 +14,97 @@ li {
 
 li a {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     font-style: fantasy;
-    padding: 14px 16px;
+    font-size: 20px;
+    padding: 15px 16px;
     text-decoration: none;
 }
 
 
 li a:hover {
     background-color: #111;
+}
+
+
+/*for banner page*/
+.banner{
+    background-image: url('../image/banner.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    min-height:450px;
+}
+
+.title{
+    background-image: url('../image/title.jpg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    min-height:150px;
+
+}
+
+/*log in container*/
+.login{
+    background-color: #9B9DA2;
+    border-radius: 4%;
+    margin: 22px;
+    margin-left: 992px;
+    height: 400px;
+    width: 250px;
+}
+
+/*text sign in*/
+.in{
+    font-size: 150%;
+    font-family: Arial;
+    margin-left: 42px;
+    padding: 40px;
+}
+
+/*username textbox*/
+.username{
+    height: 20px;
+    width: 150px;
+    background-color: #434446;
+    margin-left: 50px;
+}
+
+.password{
+    height: 20px;
+    width: 150px;
+    background-color: #434446;
+    margin: 20px;
+    margin-left: 50px;
+}
+
+/*button from http://css3buttongenerator.com/*/
+.btn {
+  background: #123852;
+  background-image: -webkit-linear-gradient(top, #123852, #2980b9);
+  background-image: -moz-linear-gradient(top, #123852, #2980b9);
+  background-image: -ms-linear-gradient(top, #123852, #2980b9);
+  background-image: -o-linear-gradient(top, #123852, #2980b9);
+  background-image: linear-gradient(to bottom, #123852, #2980b9);
+  -webkit-border-radius: 22;
+  -moz-border-radius: 22;
+  border-radius: 22px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 10px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  margin: -5px;
+  margin-left: 85px;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
