--- a/csp1/css/style.css
+++ b/csp1/css/style.css
@@ -47,6 +47,29 @@
   }
 
 
+  .banner2{
+    background-image: url('../image/actb.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    min-height:300px;
+    width: 1200px;
+    margin-left: 24px;
+    
+  }
+
+    .banner3{
+    background-image: url('../image/banner3.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    min-height:300px;
+    width: 1200px;
+    margin-left: 24px;
+    
+  }
+
+
 /*image title monologist*/
 .title{
     background-image: url('../image/title.jpg');
@@ -470,6 +493,26 @@
   text-align: justify;
 }
 
+.actt{
+  font-size: 400%;
+  margin-left:470px;
+  padding-top: 180px;
+  font-family: impact;
+  letter-spacing: 5px;
+  opacity:0.7;
+
+  }
+
+  .fan{
+  font-size: 400%;
+  margin-left:410px;
+  padding-top: 180px;
+  font-family: impact;
+  letter-spacing: 5px;
+  opacity:0.7;
+
+  }
+
 /*button from http://css3buttongenerator.com/*/
 .btn {
   background: #123852;
@@ -746,6 +789,9 @@
   float: left;
   opacity: 0.6;
 }
+
+
+
 
 
 /*for mobile*/
