--- a/mod05-01/css/style.css
+++ b/mod05-01/css/style.css
@@ -1,16 +1,16 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 }
 
-body{
-	background-color: darkblue;
+body {
+	background-color: grey;
 }
 
-.wrapper{
+.wrapper {
 	background-color: white;
-	width: 80vw; /*vw = viewport width*/
-	height: 100vh;/*vh = viewport height*/
+	width: 80vw; /* vw = viewport width */
+	height: 100vh; /* vh = viewport height */
 	margin: 0 auto;
 }
