--- a/My Portfolio/css/style.css
+++ b/My Portfolio/css/style.css
@@ -1,66 +1,135 @@
+body{
+	/*margin: 0px auto;*/
+	width: 100%;
+	margin: 0;
+}
+
+/*navbar background color*/
+.container-fluid{
+	background-color: black;
+	height: 55px;
+}
+
+/*navbar brand name*/
+.navbar .container-fluid .navbar-brand{
+	color: #0066ff;
+	font-family: 'Pacifico', cursive;
+	font-size: 20px;
+	letter-spacing: 2px;
+}
+
+/*navbar menu font*/
+.navbar .container-fluid .navbar-nav li a{
+	color: #0066ff;
+	font-family: 'Do Hyeon', sans-serif;
+	font-size: 13px;
+	letter-spacing: 1px;
+
+
+}
+
 
 /*banner section*/
 .banner{
 	/*background-image: url('../image/banner.jpeg');*/
-	background-color: rgba(0, 0, 0, 0.8);
-	width: 99.7%;
-	height: 500px;
+	/*background-color: rgba(0, 0, 0, 0.8);*/
+	background-color: black;
+	height: 600px;
+	min-width: 50vh;
 	display: block;
-
 }
 
-.name{
-	position: relative;
-	font-size: 300%;
-	color: #F4D03F;
-	font-family: Brush Script MT, Brush Script Std, cursive;
-	left: 325px;
-	top: 160px;
-	
-}
-
-.intro{
-	position: relative;
-	font-size: 100%;
-	font-family: arial;
-	left: 325px;
-	top: 140px;
-	text-align: fixed;
-	color: #F4D03F;
-}
 
 /*profile picture*/
 .profile{
 	position: relative;
-	width: 200px;
-	height: 300px;
-	border-radius: 10%;
-	top: -50px;
-	left: 30px;
+	width: 230px;
+	height: 230px;
+	top: 50px;
+	left: -25%;
+	border-radius: 100%;
+	border-style: solid;
+    border-color: #0047b3;
+    border-width: 9px;
+    object-fit: cover;
 }
 
-
-.navbar {
-  overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.8);
-  position: fixed;
-  top: 0px;
-  width: 98.5%;
-  font-family: impact;
-  letter-spacing: 2px;
-  
+.intro{
+	position: relative;
+	font-size: 15px;
+	font-family: arial;
+	left: 50%;
+	top: 280px;
+	text-align: left;
+	color: #fff;
+	float: left;
 }
 
-.navbar a {
-  float: left;
-  display: block;
-  color: #F4D03F;
-  text-align: center;
-  padding: 7px 15px;
-  text-decoration: none;
-  font-size: 17px;
-
+/*animated name... animation text filling with color*/
+.text h1{
+	font-family: 'Black Han Sans', sans-serif;
+	font-size: 45px;
+	color: #0066ff;
+/*	color: rgba(255, 255, 255, .1);
+	background-image: url('../image/banner.jpg');
+	background-repeat: repeat-x;
+	-webkit-background-clip:text;
+	animation: animate 7s linear infinite;*/
 }
+/*to animate text*/
+/*	@keyframes animate{
+
+		0%{
+			background-position: left 0px top 10px;
+		}
+		40%{
+			background-position: left 800px top 10px;	
+		}
+	}*/
+.text{
+	margin-top: -7%;
+	margin-right: 200px;
+	text-align: right;
+}
+
+.banner h4{
+	font-family: 'Dancing Script', cursive;
+	font-size: 20px;
+	color: white;
+	float: top;
+	margin-top: -240px;
+	padding-left: 850px;
+}
+
+.dev{
+	width: 220px;
+	height: 220px;
+	margin-top: -15px;
+	margin-left: -55px;
+}
+
+/*contact and social media icon*/
+.gmail{
+	width: 40px;
+	height: 37px;
+	border-radius: 100%;
+	margin-left: 3px;
+	margin-top: 420px;
+}
+
+.ig{
+	margin-bottom: -420px;
+	width: 40px;
+	height: 37px;
+}
+
+.git{
+	margin-left: -530px;
+	margin-top: 420px;
+	width: 40px;
+	height: 40px;
+}
+
 
 .main {
   padding: 16px;
@@ -69,107 +138,218 @@
 }
 
 
-/*****information*****/
+/*****INFORMATION*****/
 
 /*education section*/
 .education{
 	font-size: 150%;
-	font-family: impact;
-	margin-left: 550px;
-	margin-top: 130px;
-	letter-spacing: 3px;
+	font-family: 'Asap', sans-serif;
+	margin-left: 570px;
+	margin-top: 320px;
 	float: left;
 
 }
 
 .educ{
 	width:100px;
-	padding-top:90px;
+	margin-top: -250px;
 
 }
 
-
-.college,
-.secondary,
-.bootcamp{
-	font-size: 100%;
-	font-family: impact;
-	text-align: center;	
-	margin-top: 40px;
+#wrap{
+	width: 500px;
 }
 
+.wrap{
+	width: 900px;
+	height: 270px;
+	background-color: rgba(184, 184, 148, 0.6);
+	float: left;
+	margin-left: 235px;
+	margin-top: -520px;
+	box-shadow: 9px 9px #888888;
+}
+
+.left{
+	width: 430px;
+	background-color: transparent;
+	height: 220px;
+	float: left;
+	margin-left: 10px;
+}
+
+
+.right{
+	width: 470px;
+	height: 220px;
+	float: right;
+	margin-right: -10px;
+}
+
+.bootcamp,
 .school,
 .add,
-.year,
+.year{
+	margin-left: 35%;
+	margin-top: 50px;
+	font-size: 130%;
+	font-family: impact;
+	color: black;
+	text-align: justify;
+}
+
+.college,
 .school2,
 .add2,
 .year2{
-	font-size: 90%;
-	font-family: arial;
-	text-align: center;
-	margin-top: 5px;
-
+	margin-left: 25%;
+	margin-top: 50px;
+	font-size: 130%;
+	font-family: impact;
+	color: black;
+	text-align: justify;
 }
-	
+
+.school2,
+.school,
+.add,
+.add2,
+.year,
+.year2{
+	font-size: 95%;
+	font-family: arial;
+	text-align: justify;
+	margin-top: 5px;
+}
+
+h2{
+	font-color:black;
+}	
+
+
 /*work section*/
 .workE{
 	font-size: 150%;
-	font-family: impact;
-	margin-left: 470px;
-	margin-top: 130px;
-	letter-spacing: 3px;
+	color: black;
+	font-family: 'Asap', sans-serif;
+	margin-left: 530px;
+	margin-top: -50px;
 	float: left;	
 }
 
 .work2{
 	width: 100px;
-	padding-top:100px; 
+	margin-top:850px;
+	float: top;
+	margin-left: -100px; 
 }
+
+
+.container{
+	margin-top: 250px;
+}
+
+.container ul {
+  list-style: none;
+  position: absolute;
+  left: 55%;
+  transform: translate(-50%, -50%);
+  padding: 1px 100px;
+  color: black; 
+  font-size: 18px;
+}
+
+
+.container ul:before {
+  content: '';
+  width: 1px;
+  height: 100%;
+  position: absolute;
+  margin-left: -150px;
+  border-left: 3px dashed black;
+  
+}
+
+
+.container ul li {
+  position: relative;
+  margin-left: -120px ;
+  background-color: rgba(128, 128, 128, 0.4);
+  padding: 17px;
+  border-radius: 6px;
+  width: 550px;
+  height: 120px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, .12), 0 2px 2px rgba(0, 0, 0, .08)
+}
+
+.container ul li:not(:first-child) {
+  margin-top: 50px;
+}
+
+.container ul li > span {
+  width: 2px;
+  height: 100%;
+  background: black;
+  left: -30px;
+  top: 0;
+  position: absolute;
+}
+
+.container ul li > span:before, .container ul li > span:after {
+  content: '';
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  border: 2px solid black;
+  position: absolute;
+  background: #86b7e7;
+  left: -5px;
+  top: 0;
+}
+
 
 
 /*skills section*/
 .skills{
 	font-size: 150%;
-	font-family: impact;
-	margin-left: 520px;
-	margin-top: 400px;
-	letter-spacing: 3px;
+	font-family: 'Asap', sans-serif;
+	margin-left: 570px;
+	margin-top: 450px;
 	float: left;
 
 }
 
-
-/****Skills section!!****/
 .skill{
 	width:150px;
-	padding-top:365px;
-	margin-left: 30px;
+	padding-top:420px;
+	margin-left: 5px;
 
 }
 
 /*this is the container*/
 .center{
-	width: 60%;
+	width: 70%;
 	position:absolute;
-	margin-left: 510px;
-	margin-top: 220px;
+	margin-left: 690px;
+	margin-top: 320px;
 	transform: translate(-50%, -50%);
-	background: #333;
+	background: #000;
 	box-sizing: border-box;
-	box-shadow: 0 -2px 100px rgba(0,0,0, .5);
+	box-shadow: 0 -2px 180px rgba(0,0,0, .5);
 }
 
 .skillbox{
 	box-sizing: border-box;
 	width: 95%;
 	margin: 25px 0;
-	margin-left: 20px;
+	margin-left: 30px;
 }
 
+/*skillbox font*/
 .skillbox p{
 	color: #fff;
 	text-transform: uppercase;
-	margin: 0 0 5px;
+	margin: 0 0 10px;
 	padding: 0;
 	font-family: arial;
 	letter-spacing: 1px;
@@ -214,94 +394,72 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bea2e7', end
 }
 
 
-.container{
-	margin-top: 200px;
-}
-
-.container ul {
-  list-style: none;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 1px 100px;
-  color: black; 
-  font-size: 15px;
-}
-
-
-.container ul:before {
-  content: '';
-  width: 1px;
-  height: 100%;
-  position: absolute;
-  border-left: 2px dashed black;
-  
-}
-
-
-.container ul li {
-  position: relative;
-  margin-left: 30px ;
-  background-color: rgba(255, 255, 255, 0.2);
-  padding: 14px;
-  border-radius: 6px;
-  width: 250px;
-  box-shadow: 0 0 4px rgba(0, 0, 0, .12), 0 2px 2px rgba(0, 0, 0, .08)
-}
-
-.container ul li:not(:first-child) {
-  margin-top: 60px;
-}
-
-.container ul li > span {
-  width: 2px;
-  height: 100%;
-  background: black;
-  left: -30px;
-  top: 0;
-  position: absolute;
-}
-
-.container ul li > span:before, .container ul li > span:after {
-  content: '';
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  border: 2px solid black;
-  position: absolute;
-  background: #86b7e7;
-  left: -5px;
-  top: 0;
-}
-
 
 /*project section*/
 .project{
 	font-size: 150%;
-	font-family: impact;
-	margin-left: 500px;
-	margin-top: 600px;
-	letter-spacing: 3px;
+	font-family: 'Asap', sans-serif;
+	margin-left: 520px;
+	margin-top: 800px;
+	letter-spacing: 1px;
 	float: left;	
 }
 
 .projectimg{
 	width:150px;
-	margin-left: 80px;
-	margin-top: 550px;
+	margin-left: 40px;
+	margin-top: 750px;
 	letter-spacing: 3px;
 	float: left;	
 }
 
-h3 {
-	margin-top: 700px;
-	margin-left: 550px;
+
+.monologist{
+	float: left;
+	margin-top: 920px;
+	margin-left: -730px;
+	/*object-fit: fill;*/
 }
 
 .tatak{
+	float: right;
 	margin-top: 20px;
-	margin-left: 575px;
+	margin-right: 60px;
+
 }
+
+.explorer{
+	float: right;
+	margin-top: 7px;
+	margin-right: 666px;
+}
+
+.soon{
+	background-color: transparent;
+	border-style: dotted;
+	border-size: 15px;
+	width: 600px;
+	height: 290px;
+	margin-top: -293px;
+	margin-left: 690px;
+	float: left;
+}
+
+footer{
+	margin-top: 1550px;
+	text-align: center;
+	font-size: 15px;
+}
+/*.projects{
+	width: 1300px;
+	height: 650px;
+	background-color: rgba(184, 184, 148, 0.6);
+	float: left;
+	margin-left: 50px;
+	margin-top: 900px;
+	box-shadow: 9px 9px #888888;
+}*/
+
 
 .container ul li span:after {
   top: 100%;
@@ -328,7 +486,7 @@ h3 {
 }
 .container span.number span {
   position: absolute;
-  font-size: 10px;
+  font-size: 13px;
   left: -35px;
   font-weight: bold;
 }
@@ -341,3 +499,8 @@ h3 {
 
 
 
+@media screen and (max-width: 900px){
+	body{
+		width: 50%;
+	}
+}
