--- a/My Portfolio/css/style.css
+++ b/My Portfolio/css/style.css
@@ -31,11 +31,10 @@ body{
 
 /*banner section*/
 .banner{
-	/*background-image: url('../image/banner.jpeg');*/
 	/*background-color: rgba(0, 0, 0, 0.8);*/
 	background-color: black;
-	height: 600px;
-	min-width: 50vh;
+	height: 700px;
+	min-width: 50vw;
 	display: block;
 }
 
@@ -46,7 +45,7 @@ body{
 	width: 230px;
 	height: 230px;
 	top: 50px;
-	left: -25%;
+	left: -27%;
 	border-radius: 100%;
 	border-style: solid;
     border-color: #0047b3;
@@ -105,7 +104,7 @@ body{
 	width: 220px;
 	height: 220px;
 	margin-top: -15px;
-	margin-left: -55px;
+	margin-left: -70px;
 }
 
 /*contact and social media icon*/
@@ -124,7 +123,7 @@ body{
 }
 
 .git{
-	margin-left: -530px;
+	margin-left: -550px;
 	margin-top: 420px;
 	width: 40px;
 	height: 40px;
